--- a/FishingShop/AuthorizationWindow.xaml
+++ b/FishingShop/AuthorizationWindow.xaml
@@ -23,9 +23,20 @@
                        FontSize="10"
                        Foreground="White"
                        TextWrapping="WrapWithOverflow"
-                       HorizontalAlignment="Center"/>
+                       HorizontalAlignment="Center"
+                       Margin="0 10 0 0"/>
         </Grid>
         <Grid Height="300" VerticalAlignment="Bottom">
+
+            <TextBlock x:Name="tbError"
+                       Text="Ошибка ввода, попробуйте еще раз" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Bottom" 
+                       Margin="30 80" 
+                       Foreground="Red" 
+                       Cursor="Hand"
+                       Visibility="Hidden"/>
+
             <TextBlock Text="Забыли логин или пароль?" 
                        HorizontalAlignment="Center" 
                        VerticalAlignment="Bottom" 
