Добавлена блокировка кнопки ввода при неверном вводе логина или пароля более 5 раз

--- a/FishingShop/AuthorizationWindow.xaml
+++ b/FishingShop/AuthorizationWindow.xaml
@@ -11,7 +11,7 @@
         WindowStartupLocation="CenterScreen" 
         WindowStyle="None" >
     
-    <Grid>
+    <Grid x:Name="mainGrid">
         <Grid Height="200" VerticalAlignment="Top">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
