--- a/FishingShop/AuthorizationWindow.xaml
+++ b/FishingShop/AuthorizationWindow.xaml
@@ -19,12 +19,24 @@
                     <GradientStop Color="#FF453C9D" Offset="1"/>
                 </LinearGradientBrush>
             </Grid.Background>
-            <TextBlock Text="Добро пожаловать! Для входа в систему введите Логин и Пароль"
+            
+                <TextBlock Text="Добро пожаловать! Введите Логин и Пароль"
                        FontSize="10"
                        Foreground="White"
-                       TextWrapping="WrapWithOverflow"
+                       TextWrapping="Wrap"
                        HorizontalAlignment="Center"
-                       Margin="0 10 0 0"/>
+                       Margin="0 5 0 0"/>
+
+            <Button x:Name="btnClose"
+                        Style="{StaticResource MaterialDesignFlatMidBgButton}"
+                        Height="20"
+                        Width="20"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        Margin="0 5 5 0"
+                        Click="btnClose_Click">
+               
+            </Button>
         </Grid>
         <Grid Height="300" VerticalAlignment="Bottom">
 
@@ -37,13 +49,17 @@
                        Cursor="Hand"
                        Visibility="Hidden"/>
 
-            <TextBlock Text="Забыли логин или пароль?" 
-                       HorizontalAlignment="Center" 
-                       VerticalAlignment="Bottom" 
-                       Margin="30 10" 
-                       Foreground="Gray" 
-                       Cursor="Hand"
-                       ToolTip="Вспоминай, Тупица"/>
+            
+            <Button x:Name="btnForgot"
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Bottom" 
+                    Margin="30 10" 
+                    Content="Забыли логин или пароль?"
+                    FontSize="10"
+                    Height="20"
+                    Style="{StaticResource MaterialDesignFlatAccentButton}"
+                    Click="btnForgot_Click"/>
+
         </Grid>
         <Rectangle Width="280" 
                    Height="200" 
