--- a/FishingShop/ProductWindow.xaml
+++ b/FishingShop/ProductWindow.xaml
@@ -34,7 +34,7 @@
 
                 <ListView Margin="0 20">
                     <ListViewItem x:Name="btn1" 
-                              Content="Главная страница" 
+                              Content="Категории товаров" 
                               Foreground="White"
                               FontSize="20" Selected="btn1_Selected" />
 
@@ -62,7 +62,8 @@
                             HorizontalAlignment="Right"
                             Margin="10 0"
                             x:Name="btnLogin"
-                            Click="btnLogin_Click"/>
+                            Click="btnLogin_Click"
+                            Visibility="Hidden"/>
                 </Grid>
 
                 <Grid  Height="100" Background="#FF140A74">
